--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
 
   <style>
     :root{
-      --bg0:#06102a; --bg1:#0a1b3a;
+      /* Fundo (azul escuro) */
+      --bg0:#06102a;
+      --bg1:#0a1b3a;
+
       --line:rgba(255,255,255,.10);
       --text:rgba(255,255,255,.92);
       --muted:rgba(255,255,255,.70);
-      --gold:#1c56be; --gold2:#163f8f;
+
+      /* Dourado (mantém igual) */
+      --gold:#c8a95a;
+      --gold2:#b8943f;
+
       --shadow:0 18px 60px rgba(0,0,0,.55);
       --shadow2:0 14px 40px rgba(0,0,0,.45);
       --r-xl:26px; --r-lg:20px; --r-md:14px;
@@ -172,7 +179,6 @@
     .card-body h3{font-family:"Playfair Display",serif;font-size:22px;margin-bottom:8px}
     .card-body p{color:var(--muted);font-size:14.8px;line-height:1.7}
 
-    /* Link em cima da foto do diferencial 1 */
     .mediaLink{
       position:absolute;
       top:14px; left:14px;
@@ -366,7 +372,6 @@
         </div>
       </article>
 
-      <!-- DIFERENCIAL 2 (NATUREZA) - FOTO LIMPA -->
       <article class="card">
         <div class="card-media">
           <img src="imagens/dif-2.jpg" alt="Lazer do Condomínio Maranville" loading="lazy">
